# cc-ruff-uv

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  noxfile.py  pyproject.toml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_slug}}/tests/: test_greet.py
{{cookiecutter.project_slug}}/tests/{{cookiecutter.project_slug}}/: test_greet.py
